# PhotPy

./: pyproject.toml
PhotPy/: __init__.py  __version__.py  photpy.py  utils.py
src/: __init__.py  photpy.py
